<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="registrationForm_fullname_hint">Enter your full name</string>
    <string name="registrationForm_email_hint">Enter your email</string>
    <string name="registrationForm_password_hint">Enter password</string>
    <string name="registrationForm_contactNumber_hint">Enter Contact Number</string>
    <string name="registrationForm_travelInterest_hint">Enter your interests</string>
    <string name="registrationForm_travelStyle_hint">Enter your Travel Style</string>
    <string name="registrationForm_Register">Register</string>
    <string name="AlreadyHaveAccnt">Already have an account?</string>
    <string name="linkToLogin">Log In</string>
    <string name="login_forgotPassword">Forgot Password</string>
    <string name="labelLogIn">Don\'t have an account?</string>
    <string name="signUp_lbl">Sign Up</string>
    <string name="OnProgressMessage">This page is still in progress!! Thank you for your patience.</string>
    <string name="font_poppins">Poppins</string>
    <string name="welcome_lbl">Welcome To Your</string>
    <string name="travel_companion_lbl">Travel Companion</string>
    <string name="motto_lbl">Your Travel Trip Starts Here!</string>
    <string name="reset_password_btn">Reset Password</string>
    <string name="back_to_logIn_txt">Back to Log In</string>
    <string name="search_label">Search all</string>
    <string name="search_hint">Places to go…</string>
    <string name="home_recommend_label">Recommended for You</string>
    <string name="tailored_to_request">Tours tailored to your interests</string>
    <string name="sample_caption">Airplane Wreck, Saavedra</string>
    <string name="attraction_moalboal">Attractions in Moalboal</string>
    <string name="explore_more">Explore more places to visit</string>
    <string name="home_bottom_nav_label">Home</string>
    <string name="wishlist_bottom_nav_label">Wishlists</string>
    <string name="trips_bottom_nav_label">Trips</string>
    <string name="account_bottom_nav_label">Account</string>
    <string name="review_details">(<u>75 reviews</u>)</string>
    <string name="highlight_lbl">Highlight</string>
    <string name="description_details">One of the South Cebu beaches that you shouldn’t miss out on is Lambug Beach. Unlike the remote Panagsama Beach, Lambug Beach in Badian boasts a lively scene.</string>
    <string name="time_details">daily 6:00 AM to 6:00 PM.</string>
    <string name="location_details">Moalboal, Philippines</string>
    <string name="starting_point">Starting Point Options:</string>
    <string name="entrance_fee">Entrance Fee: ₱10 per person</string>
    <string name="bus_fare_details">Bus Fare: ₱10 per person</string>
    <string name="otheR_details">Other Details: Environmental fee: ₱100 per person </string>
    <string name="starting_point_details">Mactan AIrport</string>
    <string name="trip_schedule">When do you want to go?</string>
    <string name="admin_upload_img1">Upload image 1</string>
    <string name="admin_upload_img2">Upload image 2</string>
    <string name="admin_upload_img3">Upload image 3</string>
    <string name="admin_upload_img4">Upload image 4</string>
    <string name="admin_destination_hint">Destination Name</string>
    <string name="admin_highlight">Highlight</string>
    <string name="admin_time">Select Time</string>
    <string name="location_admin">Location</string>
    <string name="entranceFee_admin">Entrance Fee</string>
    <string name="bus_fare">Bus Fare</string>
    <string name="other_details">Other details</string>
    <string name="whatToExpect">What to expect</string>
    <string name="submit_btn_admin">Save</string>
    <string name="back_btn_admin">Back</string>
    <string name="entrance_fee_admin">Entrance Fee</string>
    <string name="cebu_pier_details">Cebu Pier</string>
    <string name="south_bus_details">South Bus Terminal</string>
    <string name="all_dates">Select Dates</string>
    <string name="who_is_coming_with_you">Who’s coming with you?</string>
    <string name="whatTo_expect">What to expect?</string>
    <string name="whatTo_expect_details">This is a truly once-in-a lifetime experience: a swim with the whale sharks of Moalboal. Your day starts very early as you are picked up in your way and then right into the water to go whale shark watching and snorkeling with these gentle giants. You’ll leave Moalboal and the whale sharks for something a little more fast-paced. </string>
    <string name="solo_details">Solo</string>
    <string name="partner_details">Partner</string>
    <string name="friends_details">Friends</string>
    <string name="family_details">Family</string>
    <string name="addDestinations">Add Destination</string>
    <string name="view_button">View Itinerary Details</string>
    <string name="add_trip_btn">Add to Trip</string>
    <string name="profile">My profile</string>
    <string name="upload_proImage">Profile Picture </string>
    <string name="fetch_full_name">Full name</string>
    <string name="fetch_email">email</string>
    <string name="change_pass">Password</string>
    <string name="fetch_contact">Contact Number</string>
    <string name="fetch_interest">Your Interest</string>
    <string name="update_btn">Update</string>
    <string name="total_users">Number of Users</string>
    <string name="total_destination">Number of Destinations</string>
    <string name="total_hotels">Number of Hotels</string>
    <string name="no_trip">You have no saved trips</string>
    <string name="wishlist_isEmpty">Your Wishlist is Empty</string>
    <string name="app_name">TravelHub</string>
    <string name="logout_btn">Sign Out</string>
    <string name="travel_details">Discover the beauty of the islands of Moalboal and canyoneering in Badian on this guided day tour. This tour includes roundtrip transfers that will pick you up from your accommodations in Cebu City and take you to Badian. You will also enjoy a complimentary motorbike ride to the Kawasan Falls jump-off point and a complimentary lunch.Your tour will begin once you are picked up from your accommodations within Cebu City, Mactan, Talaban, or Mandaue or direct from the Mactan-Cebu International Airport. When you get to Moalboal, you will meet your local guide and get on your motorized boat. You will be given swimming goggles and life jackets so you can snorkel. </string>

    <string-array name="starting_point">
        <item>Select starting point</item>
        <item>Mactan Airport</item>
        <item>Cebu South Bus</item>
        <item>Cebu Pier</item>
    </string-array>
    <string-array name="select_day">
        <item>Select Day</item>
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
    </string-array>
    <string-array name="recommended_spinner_items">
        <item>Select Category</item>
        <item>Beach and Marine Life</item>
        <item>Adventure</item>
        <item>Cultural and Historical Sites</item>
        <item>Nature and Relaxation</item>
    </string-array>
    <string-array name="num_days_spinner_items">
        <item>Select</item>
        <item>1D</item>
        <item>2D</item>
        <item>3D</item>
    </string-array>
    <string-array name="interest_spinner_items">
        <item>Select Interest</item>
        <item>Beach and Marine Life</item>
        <item>Adventure</item>
        <item>Cultural and Historical Sites</item>
        <item>Nature and Relaxation</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>