<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home_bottom_nav_label"
        />
    <item
        android:id="@+id/nav_wishlist"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/wishlist_bottom_nav_label"
        />

    <item
        android:id="@+id/nav_trip"
        android:icon="@drawable/baseline_place_24"
        android:title="@string/trips_bottom_nav_label"
        />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/account_bottom_nav_label"
        />
</menu>