<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Registration_view">

    <EditText
        android:id="@+id/fullname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginTop="84dp"
        android:autofillHints="First name MI. Last name"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/registrationForm_fullname_hint"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/registrationForm_email_hint"
        android:padding="15dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_edittext"
        android:autofillHints="username@email.com"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:hint="@string/registrationForm_password_hint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/contactNumber_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="15dp"
        android:inputType="phone"
        android:hint="@string/registrationForm_contactNumber_hint"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/travelInterest_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="15dp"
        android:inputType="text"
        android:hint="@string/registrationForm_travelInterest_hint"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactNumber_edittext"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/travelStyle_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:hint="@string/registrationForm_travelStyle_hint"
        android:padding="15dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelInterest_edittext"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/Register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:textColor="@color/white"
        android:text="@string/registrationForm_Register"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelStyle_edittext" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="422dp"
        android:layout_height="249dp"
        android:layout_marginTop="4dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/travelhub_registerdesign" />

</androidx.constraintlayout.widget.ConstraintLayout>