<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_color"
    tools:context=".activity_admin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/add_destinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/addDestinations"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/upload_img_btn_tour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/upload_btn"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/admin_upload_img1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/plus_icon_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_destinations" />

        <TextView
            android:id="@+id/upload_img_btn_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/upload_btn"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/admin_upload_img2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/plus_icon_img"
            app:layout_constraintEnd_toEndOf="@+id/upload_img_btn_tour"
            app:layout_constraintStart_toStartOf="@+id/upload_img_btn_tour"
            app:layout_constraintTop_toBottomOf="@+id/upload_img_btn_tour" />

        <TextView
            android:id="@+id/upload_img_btn_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/upload_btn"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/admin_upload_img3"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/plus_icon_img"
            app:layout_constraintEnd_toEndOf="@+id/upload_img_btn_tour"
            app:layout_constraintStart_toStartOf="@+id/upload_img_btn_tour"
            app:layout_constraintTop_toBottomOf="@+id/upload_img_btn_2" />

        <TextView
            android:id="@+id/upload_img_btn_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/upload_btn"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/admin_upload_img4"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/plus_icon_img"
            app:layout_constraintEnd_toEndOf="@+id/upload_img_btn_tour"
            app:layout_constraintStart_toStartOf="@+id/upload_img_btn_tour"
            app:layout_constraintTop_toBottomOf="@+id/upload_img_btn_3" />

        <EditText
            android:id="@+id/tour_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/admin_destination_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/upload_img_btn_tour"
            app:layout_constraintStart_toStartOf="@+id/upload_img_btn_tour"
            app:layout_constraintTop_toBottomOf="@+id/upload_img_btn_4" />

        <EditText
            android:id="@+id/highlight_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/admin_highlight"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tour_name"
            app:layout_constraintStart_toStartOf="@+id/tour_name"
            app:layout_constraintTop_toBottomOf="@+id/tour_name" />

        <TextView
            android:id="@+id/time_admin_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:text="@string/admin_time"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/highlight_admin"
            app:layout_constraintStart_toStartOf="@+id/highlight_admin"
            app:layout_constraintTop_toBottomOf="@+id/highlight_admin" />

        <EditText
            android:id="@+id/location_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/location_admin"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/time_admin_btn"
            app:layout_constraintStart_toStartOf="@+id/time_admin_btn"
            app:layout_constraintTop_toBottomOf="@+id/time_admin_btn" />

        <EditText
            android:id="@+id/latitude_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Latitude"
            android:importantForAutofill="no"
            android:inputType="numberDecimal|numberSigned"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/location_admin"
            app:layout_constraintStart_toStartOf="@+id/location_admin"
            app:layout_constraintTop_toBottomOf="@+id/location_admin" />

        <EditText
            android:id="@+id/longitude_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Longitude"
            android:importantForAutofill="no"
            android:inputType="numberDecimal|numberSigned"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/latitude_admin"
            app:layout_constraintStart_toStartOf="@+id/latitude_admin"
            app:layout_constraintTop_toBottomOf="@+id/latitude_admin" />

        <EditText
            android:id="@+id/entrance_fee_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/entrance_fee_admin"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/longitude_admin"
            app:layout_constraintStart_toStartOf="@+id/longitude_admin"
            app:layout_constraintTop_toBottomOf="@+id/longitude_admin" />

        <EditText
            android:id="@+id/bus_fare_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/bus_fare"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/entrance_fee_admin"
            app:layout_constraintStart_toStartOf="@+id/entrance_fee_admin"
            app:layout_constraintTop_toBottomOf="@+id/entrance_fee_admin" />

        <EditText
            android:id="@+id/other_details_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/other_details"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/bus_fare_admin"
            app:layout_constraintStart_toStartOf="@+id/bus_fare_admin"
            app:layout_constraintTop_toBottomOf="@+id/bus_fare_admin" />

        <EditText
            android:id="@+id/what_to_expect_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="start|top"
            android:hint="@string/whatToExpect"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/other_details_admin"
            app:layout_constraintStart_toStartOf="@+id/other_details_admin"
            app:layout_constraintTop_toBottomOf="@+id/other_details_admin" />

        <Spinner
            android:id="@+id/recommended_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@+id/what_to_expect_admin"
            app:layout_constraintStart_toStartOf="@+id/what_to_expect_admin"
            app:layout_constraintTop_toBottomOf="@+id/what_to_expect_admin" />

        <Button
            android:id="@+id/back_admin_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background"
            android:text="@string/back_btn_admin"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/save_admin_btn"
            app:layout_constraintStart_toStartOf="@+id/recommended_spinner"
            app:layout_constraintTop_toBottomOf="@+id/recommended_spinner" />

        <Button
            android:id="@+id/save_admin_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_background"
            android:text="@string/submit_btn_admin"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/recommended_spinner"
            app:layout_constraintStart_toEndOf="@+id/back_admin_btn"
            app:layout_constraintTop_toTopOf="@+id/back_admin_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

